# make_avi

./: CMakeLists.txt  avi_structs.h  build_avi.cpp  build_avi.h  config.cpp  config.h  main.cpp
example/: CMakeLists.txt  config.cpp  config.h  main.cpp
example/cfg/: make_avi_left.cfg
include/: build_avi.h  build_avi_exception.hpp
src/: CMakeLists.txt  build_avi.cpp
